[package]
name = "stm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z' # Turn on maximum optimizations
lto = true # use link time optimization

[dependencies]
cortex-m = "^0.6.3"		# Access to the generic ARM peripherals
cortex-m-rt = "^0.6.12"		# Startup code for the ARM Core
embedded-hal = "^0.2.4" 	# Access to generic embedded functions ('set_high')
panic-halt = "^0.2.0"		# Panic Handler

[dependencies.stm32f0]
version = "0.15.0"
features = ["stm32f0x2", "rt"]
